Use English gender contract values
